[package]
name = "rustiles_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
flate2 = "1.0.28"
geo-types = "0.7.12"
log = "0.4.20"
mvt-reader = "1.2.0"
sqlite = "0.33.0"
tiny-skia = "0.11.4"
